--- a/GOMVC/Views/Shared/_Layout.cshtml
+++ b/GOMVC/Views/Shared/_Layout.cshtml
@@ -29,6 +29,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="SaldosCartera" asp-action="Index">Saldos Cartera</a>
                         </li>
                     </ul>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Loads" asp-action="Index">Manual Load</a>
+                        </li>
+                        <li class="nav-item">
+                            <form asp-area="" asp-controller="User" asp-action="Logout" method="post" class="form-inline">
+                                <button type="submit" class="btn btn-link nav-link text-dark">Logout</button>
+                            </form>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
