--- a/GOMVC/Views/User/Index.cshtml
+++ b/GOMVC/Views/User/Index.cshtml
@@ -6,6 +6,13 @@
 
 <h2>Login</h2>
 
+@if (ViewData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        @ViewData["ErrorMessage"]
+    </div>
+}
+
 <form asp-action="Login" method="post">
     <div class="form-group">
         <label asp-for="USERNAME"></label>
