--- a/GOMVC/Views/Shared/_Layout.cshtml
+++ b/GOMVC/Views/Shared/_Layout.cshtml
@@ -28,11 +28,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SaldosCartera" asp-action="Index">Saldos Cartera</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SaldosDiarios" asp-action="Index">Saldos Diarios</a>
+                        </li>
                     </ul>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Loads" asp-action="Index">Manual Load</a>
+                            <a class="nav-link" asp-controller="Loads" asp-action="ExecuteBatchFile">Run Batch File</a>
                         </li>
                         <li class="nav-item">
                             <form asp-area="" asp-controller="User" asp-action="Logout" method="post" class="form-inline">
