--- a/GOMVC/Views/Shared/_Layout.cshtml
+++ b/GOMVC/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Loads" asp-action="ExecuteBatchFile">Run Batch File</a>
+                            <a class="nav-link" asp-controller="Loads" asp-action="Index">Run Batch File</a>
                         </li>
                         <li class="nav-item">
                             <form asp-area="" asp-controller="User" asp-action="Logout" method="post" class="form-inline">
