--- a/GOMVC/Views/Shared/_Layout.cshtml
+++ b/GOMVC/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="SaldosCartera" asp-action="Index">Saldos Cartera</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SaldosDiarios" asp-action="Index">Saldos Diarios</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SaldosContables" asp-action="Index">Saldos Contables</a>
                         </li>
                     </ul>
                     </ul>
