--- a/GOMVC/Views/Shared/_Layout.cshtml
+++ b/GOMVC/Views/Shared/_Layout.cshtml
@@ -25,13 +25,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SaldosCartera" asp-action="Index">Saldos Cartera</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="defaultReportsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Default Reports
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="defaultReportsDropdown">
+                                <li><a class="dropdown-item" asp-area="" asp-controller="SaldosCartera" asp-action="Index">Saldos Cartera</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="SaldosContables" asp-action="Index">Saldos Contables</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AplicacionPagos" asp-action="Index">Aplicacion Pagos></a></li>
+                            </ul>
                         </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SaldosContables" asp-action="Index">Saldos Contables</a>
-                        </li>
-                    </ul>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -55,7 +58,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - GOMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            © 2024 - GOMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
