--- a/GOMVC/Views/Saldos_Cartera/Index.cshtml
+++ b/GOMVC/Views/Saldos_Cartera/Index.cshtml
@@ -50,7 +50,7 @@
         <!-- Data Table with Scrollbars -->
         <div style="overflow-x: auto; overflow-y: auto; max-height: 400px;">
             <!-- Table content goes here -->
-            <table class="table">
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Id_Solicitud</th>
