--- a/GOMVC/Views/Saldos_Contables/Index.cshtml
+++ b/GOMVC/Views/Saldos_Contables/Index.cshtml
@@ -52,7 +52,7 @@
     <div class="col-md-9">
         <!-- Data Table with Scrollbars -->
         <div style="overflow-x: auto; overflow-y: auto; max-height: 400px;">
-            <table>
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>Id_Credito</th>
