--- a/GOMVC/Views/Shared/_Layout.cshtml
+++ b/GOMVC/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <ul class="dropdown-menu" aria-labelledby="defaultReportsDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="SaldosCartera" asp-action="Index">Saldos Cartera</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="SaldosContables" asp-action="Index">Saldos Contables</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="AplicacionPagos" asp-action="Index">Aplicacion Pagos></a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AplicacionPagos" asp-action="Index">Aplicacion Pagos</a></li>
                             </ul>
                         </li>
                     </ul>
