--- a/GOMVC/Views/Shared/_Layout.cshtml
+++ b/GOMVC/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
                                 <li><a class="dropdown-item" asp-area="" asp-controller="SaldosContables" asp-action="Index">Saldos Contables</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="AplicacionPagos" asp-action="Index">Aplicacion Pagos</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="OtorgamientoCreditos" asp-action="Index">Otorgamiento Creditos</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Gestiones" asp-action="Index">Gestiones</a></li>
+
                             </ul>
                         </li>
                     </ul>
